add experiment blog on why Codatta

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -6,9 +6,9 @@ codatta_team:
   github: codatta
   linkedin: codetta-io
 
-alice_smith:
-  name: Alice Smith
-  bio: "Blockchain Researcher & AI Enthusiast."
-  avatar: /assets/images/alice.jpg
-  twitter: alicesmith
-  github: alicesmith
+yi_zhang:
+  name: Yi Zhang
+  bio: "Founder & CEO"
+  avatar: 
+  twitter: drtwo101
+  github: beingzy
