--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -12,3 +12,10 @@ yi_zhang:
   avatar: 
   twitter: drtwo101
   github: beingzy
+
+jason_cheng:
+  name: Jason Cheng
+  bio: "Co-founder & VP of Protocol"
+  avatar:
+  twitter: JasonIn404
+  github: Hopeoftown
