correct author's info and profile

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -13,9 +13,9 @@ yi_zhang:
   twitter: drtwo101
   github: beingzy
 
-jason_cheng:
-  name: Jason Cheng
+jason404:
+  name: Jason C.
   bio: "Co-founder & VP of Protocol"
   avatar:
-  twitter: JasonIn404
-  github: Hopeoftown
+  twitter: Hopeoftown
+  github: JasonIn404
