--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,15 @@ plugins:
   - jekyll-seo-tag
   - jekyll-tailwind
 
+# Markdown processor settings
+markdown: kramdown
+kramdown:
+  parse_block_html: true
+  parse_span_html: true
+  syntax_highlighter: rouge
+  syntax_highlighter_opts:
+    disable: false
+
 # Defaults
 defaults:
   - scope:
