Add Codatta Chainlink CCIP integration announcement
- Add new announcement post about Codatta integrating Chainlink CCIP
- Update categories: ERC-8004 posts to Blockchain, new post to Ecosystem & Community
- Add Codatta team avatar and integration image
- Update author configuration with new avatar path

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,10 +1,10 @@
 codatta_team:
   name: Codatta Team
   bio: "The team behind Codatta, the knowledge layer for AI."
-  avatar: /assets/images/codatta-logo.png
+  avatar: /assets/avatar/codatta-logo.png
   twitter: codatta_io
   github: codatta
-  linkedin: codetta-io
+  linkedin: codatta-io
 
 yi_zhang:
   name: Yi Zhang
