Add article: The Robot Data Industry: Pain Points, Solutions, and Future Trends

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -19,3 +19,10 @@ jason404:
   avatar:
   twitter: Hopeoftown
   github: JasonIn404
+
+kevin_wang:
+  name: Kevin Wang
+  bio: "Co-founder & CPO"
+  avatar:
+  twitter: qiw
+  github:
