--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     disable: false
+    line_numbers: false
+    inline_theme: base16
 
 # Defaults
 defaults:
