--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ kramdown:
   syntax_highlighter_opts:
     disable: false
     line_numbers: false
+    inline_theme: base16
 
 # Defaults
 defaults:
