Gasless Adapter: Enabling x402 Protocol Support for Non-Upgradable ERC20 Tokens

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -40,3 +40,10 @@ sky:
   avatar:
   twitter:
   github:
+
+george:
+  name: George Xu.
+  bio: "Senior DApp Engineer"
+  avatar:
+  twitter: 
+  github: chababa9
